fix z-index + code formating

--- a/src/scss/ploum-caroussel.scss
+++ b/src/scss/ploum-caroussel.scss
@@ -1,7 +1,7 @@
 .caroussel {
     position: relative;
     overflow: hidden;
-    z-index: -1;
+
     img {
         width: 100%;
         height: 100%;
@@ -9,13 +9,16 @@
         position: absolute;
         display: none;
         transition: $caroussel-img-transition;
+        z-index: 0;
     }
+
     img:first-of-type {
         display: block;
     }
 }
 
-.arrow-left-caroussel, .arrow-right-caroussel {
+.arrow-left-caroussel,
+.arrow-right-caroussel {
     width: $arrow-caroussel-width;
     height: $arrow-caroussel-height;
     background-repeat: no-repeat;
