--- a/src/scss/ploum-nav-bar.scss
+++ b/src/scss/ploum-nav-bar.scss
@@ -11,11 +11,13 @@
     padding-left: $nav-bar-padding-x;
     padding-right: $nav-bar-padding-x;
     box-shadow: $nav-bar-box-shadow;
+    z-index: 100;
 }
 
 
 .nav-burger {
     cursor: pointer;
+
     @media (min-width: $nav-bar-breakpoint) {
         display: none;
     }
@@ -26,7 +28,7 @@
 }
 
 .nav-pannel {
-    position:absolute;
+    position: absolute;
     display: none;
     background-color: $nav-pannel-bg-color;
     width: $nav-pannel-size;
@@ -36,14 +38,18 @@
     transition: $nav-pannel-transition;
     z-index: 100;
     height: 100vh;
-    a, span{
+
+    a,
+    span {
         display: block;
         background-color: $nav-pannel-link-bg-color;
         color: $nav-pannel-link-color;
         padding: $nav-pannel-link-padding;
         cursor: pointer;
     }
-    a:hover, span:hover{
+
+    a:hover,
+    span:hover {
         background-color: $nav-pannel-link-bg-color-hover;
         color: $nav-pannel-link-color-hover;
     }
@@ -54,10 +60,13 @@
     justify-content: space-between;
     width: $nav-links-size;
     align-items: center;
+
     @media (max-width: $nav-bar-breakpoint) {
         display: none;
     }
-    a, span {
+
+    a,
+    span {
         cursor: pointer;
     }
 }
@@ -69,12 +78,16 @@
     width: $nav-dropdown-size;
     transform: translateY(100%);
     bottom: 0;
-    >a, >span {
+
+    >a,
+    >span {
         display: block;
         color: $nav-dropdown-pannel-color;
         padding: $nav-dropdown-link-padding;
     }
-    >a:hover, >span:hover {
+
+    >a:hover,
+    >span:hover {
         background-color: $nav-dropdown-pannel-bg-color-hover;
         color: $nav-dropdown-pannel-color-hover;
     }
